# FurnitureCompanyFastAPI

./: .help.txt  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  alembic.ini  database.py  main.py
src/admin/: dependencies.py  panel.py
src/bank/: models.py  router.py  schemas.py
src/building/: models.py  router.py  schemas.py
src/cleaning/: models.py  router.py  schemas.py
src/customer/: models.py  router.py  schemas.py
src/engineer/: models.py  router.py  schemas.py
src/location/: models.py  router.py  schemas.py
src/migration/: env.py
src/migration/versions/: 159f893c9ddd_.py  2688e40d0795_.py  2bacfd4e9d17_.py  5b9887d65158_.py  7e5fe9fa88b9_.py  8683092a299b_.py  a6bb9e7566d5_.py  b6cb80b2dba5_.py  bf9edf502be0_.py  c19057503977_.py  c291a0e4d4e1_.py
src/order/: dependecies.py  models.py  router.py  schemas.py  utils.py
src/security/: models.py  router.py  schemas.py
src/user/: models.py  router.py  schemas.py
src/worker/: models.py  one.py  router.py  schemas.py
