[tool.poetry]
name = "furniturecompany"
version = "0.1.0"
description = "Сеть мебельных предприятий"
authors = ["alex <dr.p163@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
postgres = "^4.0"
alembic = "^1.13.2"
sqladmin = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
